特性: 完善认证规则优先级、敏感词管理、帖子服务逻辑及前端组件优化
- 后端:
  - 新增认证规则优先级和状态调整 DTO
  - 优化敏感词、认证规则及统计相关控制层逻辑
  - 增强帖子和评论服务的稳定性
  - 完善文件服务和用户缓存逻辑
- 前端:
  - 优化认证规则、评论、邮件配置、帖子及敏感词管理页面
  - 完善路由和权限存储逻辑